@@ -78,6 +78,9 @@ DETACH_JOB_FROM_SERVER="0"
 # Command to use to connect to other nodes (default is "ssh" in the PATH)
 #OPENSSH_CMD="/usr/bin/ssh -p 6667"
 
+# Set the timeout value for each ssh connection (default is 120)
+#OAR_SSH_CONNECTION_TIMEOUT="200"
+
 # If you have installed taktuk and want to use it to manage remote
 # admnistration commands then give the full command path
 # (with your options except "-m" and "-o").
